# psp-integration-guide

./: .gitignore  README.md  pyproject.toml
diagrams/: newpayment.c1.drawio
gateway/: database.py  tables.py
source/: app.py  database.py  invoices.py  paypal.py  tables.py
